css/index.css
* {
	box-sizing: border-box;
}
body {
	font-size: 16px;
	font-family: arial, sans-serif;
}
a {
	color: inherit;
	text-decoration: underline;
}
section {
	background: #fff;
	position: relative;
	clear: both;
	overflow: hidden;
}
.container {
	max-width: 1000px;
	margin: auto;
	padding-top: 3em;
	padding-bottom: 3em;
	overflow: hidden;
}
.form-control .form-input {
	font-size: 1em;
	line-height: 24px;
	border: none;
	padding: 2px 9px 3px;
	margin: 0px;
	height: 36px;
	width: 100%;
}
code {
	display: none;
}

/*************************************
 * header
 *************************************/

.brand {
	width: 320px;
}
#header {
	text-align: center;
	border-top: 16px solid #33CC99;
	border-bottom: 1px solid #ddd;
}
#header .container {
	padding-top: 6em;
}
#header .row {
	margin-bottom: 1em;
}
#header .row > div {
	display: inline-block;
}
#header .row:last-child {
	margin-bottom: 0.5em;
}
#header .form {
	height: 38px;
	width: 30em;
	overflow: hidden;
	border: 1px solid #ccc;
	border-radius: 4px;
	display: inline-block;
	padding: 0;
	border-bottom-right-radius: 0;
	border-top-right-radius: 0;
}
@media (max-width: 560px) {
	.container {
		padding-top: 1.5em;
		padding-bottom: 1.5em;
	}
	#header .container {
		padding-top: 2em;
	}
	.brand {
		width: 240px;
	}
	#header .form {
		width: auto;
	}
}
#header .search .button {
	display: inline-block;
	color: #fff;
	padding: 0px 12px;
	height: 38px;
	line-height: 38px;
	border-radius: 3px;
	vertical-align: bottom;
	border-bottom-left-radius: 0;
	border-top-left-radius: 0;
	background: #4285f4;
	text-decoration: none;
}

/* autocomplete */

.ui-autocomplete {
	max-height: 216px;
	border-color: #ddd;
	overflow-y: auto;
	/* prevent horizontal scrollbar */
	overflow-x: hidden;
}
.ui-autocomplete .ui-menu-item {
	padding-left: 12px;
	padding-right: 12px;
}
.ui-autocomplete .ui-menu-item.ui-state-focus {
	border-color: transparent;
	background: #eee;
}
.ui-autocomplete .ui-menu-item span {
	display: block;
}
.ui-autocomplete .ui-menu-item .category {
	color: gray;
	font-size: 0.85em;
}
.ui-autocomplete .ui-menu-item a {
	text-decoration: none;
}

/*************************************
 * service
 *************************************/

/*#service .container {
	padding-top: 3em;
	padding-bottom: 3em;
}*/
#service .list {
	max-width: 38em;
	text-align: center;
	margin: auto;
	padding: 0 .3em;
	position: relative;
}
#service .col-3 {
	width: 25%;
	padding: .5em;
	display: block;
	float: left;
}
#service .list-item {
	width: 100%;
	padding: 1em;
	border: 1px solid #33CC99;
	color: #333;
	text-align: center;
	border-radius: 24px;
	background: rgba(255,255,255,1);
	background: -moz-linear-gradient(top, #fff 0%, #efefef 100%);
	background: -webkit-gradient(left top, left bottom, color-stop(0%, #fff), color-stop(100%, #efefef));
	background: -webkit-linear-gradient(top, #fff 0%, #efefef 100%);
	background: -o-linear-gradient(top, #fff 0%, #efefef 100%);
	background: -ms-linear-gradient(top, #fff 0%, #efefef 100%);
	background: linear-gradient(to bottom, #fff 0%, #efefef 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#efefef', GradientType=0 );
}
#service .col-3 .list-item {
	cursor: pointer;
}
#service .col-12 {
	width: 100%;
	text-align: left;
	clear: left;
	padding-top: .25em;
	padding-bottom: .25em;
}
#service .col-12 .list-item {
	background: #ddd;
	border: none;
	border-radius: 0;
	padding-left: 1em;
	padding-right: 1em;
	padding-top: 1em;
	padding-bottom: 1em;
}
#service .col-12 ul li {
	display: inline-block;
}
#service .list-item .list-icon {
	background: url('../image/services-mono.svg') no-repeat;
	background-size: 400%;
	width: 4.5em;
	height: 4.5em;
	margin: auto;
}
@media (max-width: 512px) {
	#service .list-item {
		padding: 1em .5em;
		border-radius: 18px;
	}
	#service .list-item .list-icon {
		width: 3em;
		height: 3em;
	}
}
@media (max-width: 400px) {
	#service .list-item {
		padding: .75em .5em;
		border-radius: 16px;
	}
	#service .list-item .list-icon {
		width: 2.5em;
		height: 2.5em;
	}
}
@media (max-width: 375px) {
	#service .col-3 {
		padding: .3em;
	}
	#service .list-item {
		padding: .5em .5em;
		border-radius: 16px;
	}
	#service .list-item .list-icon {
		width: 2.5em;
		height: 2.5em;
	}
	#service .list-item .label {
		width: 2em;
		overflow: hidden;
		display: block;
		white-space: nowrap;
		margin: auto;
	}
}
#service .col-3 .list-item:hover {
	background: rgba(255,255,255,1);
	background: -moz-linear-gradient(top, #fff 0%, #eaeaea 100%);
	background: -webkit-gradient(left top, left bottom, color-stop(0%, #fff), color-stop(100%, #eaeaea));
	background: -webkit-linear-gradient(top, #fff 0%, #eaeaea 100%);
	background: -o-linear-gradient(top, #fff 0%, #eaeaea 100%);
	background: -ms-linear-gradient(top, #fff 0%, #eaeaea 100%);
	background: linear-gradient(to bottom, #fff 0%, #eaeaea 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#eaeaea', GradientType=0 );
}
#service .col-3 .list-item:hover .list-icon,
#service .col-3 .list-item.active .list-icon {
	background-image: url('../image/services-color.svg');
}

#service .list-item .sub-item {
	border: 2px solid #fff;
	border-radius: 6px;
	margin: 0.5em .5em;
	padding: 0.5em 1em;
	padding-left: 10px;
	white-space: nowrap;
	display: inline-block;
	overflow: hidden;
}
#service .list-item .sub-item .icon {
	width: 30px;
	height: 30px;
	display: inline-block;
	background: url('../image/services-button.svg') no-repeat;
	background-size: 400%;
	margin: -9px 0;
	margin-right: 8px;
}
#service .list-item .sub-item a {
	text-decoration: none;
}

#service .list-item.transport .list-icon, #service .list-item.transport .sub-item .icon {background-position: 0 0;}
#service .list-item.tax .list-icon, #service .list-item.tax .sub-item .icon {background-position: 33.333% 0;}
#service .list-item.post .list-icon, #service .list-item.post .sub-item .icon {background-position: 66.667% 0;}
#service .list-item.tourism .list-icon, #service .list-item.tourism .sub-item .icon {background-position: 100% 0;}
#service .list-item.event .list-icon, #service .list-item.event .sub-item .icon {background-position: 0% 50%;}
#service .list-item.job .list-icon, #service .list-item.job .sub-item .icon {background-position: 33.333% 50%;}
#service .list-item.payment .list-icon, #service .list-item.payment .sub-item .icon {background-position: 66.667% 50%;}
#service .list-item.medical .list-icon, #service .list-item.medical .sub-item .icon {background-position: 100% 50%;}
#service .list-item.citizen .list-icon, #service .list-item.citizen .sub-item .icon {background-position: 0 100%;}
#service .list-item.local .list-icon, #service .list-item.local .sub-item .icon {background-position: 33.333% 100%;}
#service .list-item.law .list-icon, #service .list-item.law .sub-item .icon {background-position: 66.667% 100%;}
#service .list-item.tnecg .list-icon, #service .list-item.tnecg .sub-item .icon {background-position: 100% 100%;}

#service .list-item.transport .sub-item,
#service .col-3 .transport:hover, #service .col-3 .transport.active, #service .col-12 .transport a:hover {color: #0095A0; border-color: #0095A0;}
#service .list-item.tax .sub-item,
#service .col-3 .tax:hover, #service .col-3 .tax.active, #service .col-12 .tax a:hover {color: #F7B52C; border-color: #F7B52C;}
#service .list-item.post .sub-item,
#service .col-3 .post:hover, #service .col-3 .post.active, #service .col-12 .post a:hover {color: #13AE67; border-color: #13AE67;}
#service .list-item.tourism .sub-item,
#service .col-3 .tourism:hover, #service .col-3 .tourism.active, #service .col-12 .tourism a:hover {color: #5BADC9; border-color: #5BADC9;}
#service .list-item.event .sub-item,
#service .col-3 .event:hover, #service .col-3 .event.active, #service .col-12 .event a:hover {color: #B367B7; border-color: #B367B7;}
#service .list-item.job .sub-item,
#service .col-3 .job:hover, #service .col-3 .job.active, #service .col-12 .job a:hover {color: #7779B8; border-color: #7779B8;}
#service .list-item.payment .sub-item,
#service .col-3 .payment:hover, #service .col-3 .payment.active, #service .col-12 .payment a:hover {color: #A5B548; border-color: #A5B548;}
#service .list-item.medical .sub-item,
#service .col-3 .medical:hover, #service .col-3 .medical.active, #service .col-12 .medical a:hover {color: #F27968; border-color: #F27968;}
#service .list-item.citizen .sub-item,
#service .col-3 .citizen:hover, #service .col-3 .citizen.active, #service .col-12 .citizen a:hover {color: #D86464; border-color: #D86464;}
#service .list-item.local .sub-item,
#service .col-3 .local:hover, #service .col-3 .local.active, #service .col-12 .local a:hover {color: #727171; border-color: #727171;}
#service .list-item.law .sub-item,
#service .col-3 .law:hover, #service .col-3 .law.active, #service .col-12 .law a:hover {color: #906C8C; border-color: #906C8C;}
#service .list-item.tnecg .sub-item,
#service .col-3 .tnecg:hover, #service .col-3 .tnecg.active, #service .col-12 .tnecg a:hover {color: #C9A063; border-color: #C9A063;}

#service .list-item.transport .sub-item,
#service .list-item.tax .sub-item,
#service .list-item.post .sub-item,
#service .list-item.tourism .sub-item,
#service .list-item.event .sub-item,
#service .list-item.job .sub-item,
#service .list-item.payment .sub-item,
#service .list-item.medical .sub-item,
#service .list-item.citizen .sub-item,
#service .list-item.local .sub-item,
#service .list-item.law .sub-item,
#service .list-item.tnecg .sub-item {color: #000;}

/*************************************
 * footer
 *************************************/

#footer {
	background: #33CC99;
	color: #fff;
	text-align: center;
}
#footer .col {
	margin-right: .5em;
	margin-left: .5em;
	display: inline-block;
	vertical-align: middle;
}
#footer .col .col {
	margin-left: 0em;
}
#footer .icon {
	height: 1.5em;
}
#footer .icon.igov {
	height: 2.5em;
	margin-bottom: -0.5em;
}
#footer .slogan {
	text-align: left;
	margin-top: -1em;
	margin-bottom: -1em;
}
#footer .slogan span {
	display: block;
	font-size: 0.8em;
}

